# AnnabanOS

./: AGENTS.md  BRANDING.md  COLLABORATION.md  K-12 Learning  README.md  SparkAI+  aggregator.py  cli.py  main.py  main_py_Consolidated_AnnabanOS_System_Scaffold.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  task_scenarios.json
.bolt/: mcp.json
aetheros/: __init__.py  api_emulator.py  capabilities.py  models.py
annaban-benchmark/: README.md  pyproject.toml
annaban-benchmark/.github/workflows/: benchmark.yml  ci.yml  publish.yml
annaban-benchmark/annaban_benchmark/: __init__.py  cli.py  consensus.py  cost.py  harness.py
annaban-benchmark/annaban_benchmark/api/: server.py
annaban-benchmark/annaban_benchmark/datasets/: adversarial_prompts.jsonl  defense_sim_tasks.jsonl  loader.py  logistics_tasks.jsonl  reasoning_tasks.jsonl
annaban_benchmark/: __init__.py  audit.py  cli.py  consensus.py  constraints.py  cost.py  datasets.py  harness.py  metrics.py  models.py  normalizer.py  orchestrator.py  router.py  signals.py
annaban_maritime/: __init__.py
annabanos/: __init__.py  boot.py  execution.py  integration.py
api/: __init__.py  stream_endpoints.py  ui_endpoints.py
core/: __init__.py  contracts.py
datasets/: adversarial_prompts.jsonl  defense_sim_tasks.jsonl  logistics_tasks.jsonl  reasoning_tasks.jsonl
docs/: iaftp.md  rtx_spark_simulation.md
examples/: run_local.py  run_multimodel.py
kubernetes/: annaban-runner.yaml  benchmark-job.yaml
llm_agents/: __init__.py  anthropic_agent.py  base_agent.py  openai_agent.py
(+46 files in other folders)
