[project]
name = "annaban-benchmark"
version = "0.1.0"
description = "Deterministic LLM governance middleware with routing, constraints, signals, and audit logging"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "openai>=1.40.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
annaban = "cli:main"
