[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annaban-benchmark"
version = "0.1.0"
description = "Multi-model evaluation framework for LLM consensus, routing, and governance scoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AnnabanOS Team"},
]
keywords = ["llm", "benchmark", "governance", "consensus", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
annaban = "annaban_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["annaban_benchmark*"]
